--- a/ACadEngineActivity/.classpath
+++ b/ACadEngineActivity/.classpath
@@ -5,5 +5,13 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="src" path="/AndEngine"/>
+	<classpathentry kind="lib" path="C:/adt-bundle-windows-x86_64/sdk/platforms/android-15/android.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/C:/adt-bundle-windows-x86_64/sdk/docs/reference"/>
+		</attributes>
+		<accessrules>
+			<accessrule kind="nonaccessible" pattern="com/android/internal/**"/>
+		</accessrules>
+	</classpathentry>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
